Update and rename Two Sum.md to 1. Two Sum.md

--- a/1. Two Sum.md
+++ b/1. Two Sum.md
@@ -1,3 +1,7 @@
+Link: https://leetcode.com/problems/two-sum
+
+Date Solved: 3/8/2024
+
 # Problem
 
 Given an array of integers nums and an integer target, return indices of the two numbers such that they add up to target.
