Update 1. Two Sum.md

--- a/1. Two Sum.md
+++ b/1. Two Sum.md
@@ -2,6 +2,8 @@ Link: https://leetcode.com/problems/two-sum
 
 Date Solved: 3/8/2024
 
+Language: C++
+
 # Problem
 
 Given an array of integers nums and an integer target, return indices of the two numbers such that they add up to target.
@@ -42,7 +44,7 @@ Constraints:
 Only one valid answer exists
  
 
-Follow-up: Can you come up with an algorithm that is less than O(n2) time complexity?
+Follow-up: Can you come up with an algorithm that is less than O(n<sup>2</sup>) time complexity?
 
 ---
 
