--- a/2. Add Two Numbers.md
+++ b/2. Add Two Numbers.md
@@ -4,6 +4,8 @@ Date Solved: 3/8/2024
 
 Language: C++
 
+Difficulty: Normal
+
 # Problem
 
 You are given two non-empty linked lists representing two non-negative integers. 
