--- a/1. Two Sum.md
+++ b/1. Two Sum.md
@@ -4,6 +4,8 @@ Date Solved: 3/8/2024
 
 Language: C++
 
+Difficulty: Easy
+
 # Problem
 
 Given an array of integers nums and an integer target, return indices of the two numbers such that they add up to target.
