--- a/9. Palindrome Number.md
+++ b/9. Palindrome Number.md
@@ -31,7 +31,7 @@ palindrome, and false otherwise.
  
 Constraints:
 
--231 <= x <= 231 - 1
+-2<sup>31</sup> <= x <= 2<sup>31</sup> - 1
  
 
 Follow up: Could you solve it without converting the integer to a string?
