Update 14. Longest Common Prefix.md

--- a/14. Longest Common Prefix.md
+++ b/14. Longest Common Prefix.md
@@ -44,19 +44,25 @@ class Solution {
 public:
     string longestCommonPrefix(vector<string>& strs) 
     {
+       //Empty String
        string ans = "";
-       
+
+       //Sort the Array of Strings
        sort(strs.begin(), strs.end());
 
+       //Set the First and Last strings of the Sorted Array
        string firstStr = strs[0], lastStr = strs[strs.size() - 1];
 
+       //Compare every letter of the first and last strings
        for (int i = 0; i < min(firstStr.size(), lastStr.size()); i++)
        {
+            //If Letters are Different, break 
             if (firstStr[i] != lastStr[i])
             {
                 break; 
             }
 
+            //Append letters that are the same to the Empty String  
             ans += firstStr[i];
        }
 
