Update 20. Valid Parentheses.md

--- a/20. Valid Parentheses.md
+++ b/20. Valid Parentheses.md
@@ -38,7 +38,7 @@ Every close bracket has a corresponding open bracket of the same type.
  
 Constraints:
 
-1 <= s.length <= 104
+1 <= s.length <= 10<sup>4</sup>
 
 s consists of parentheses only '()[]{}'.
 ---
