Update 20. Valid Parentheses.md

--- a/20. Valid Parentheses.md
+++ b/20. Valid Parentheses.md
@@ -54,14 +54,20 @@ public:
     {
         stack<char> charStack;
 
+        //Go through the String
         for (char pare : s)
         {
+            //If any open Parentheses
             if (pare == '(' || pare == '{' || pare == '[')
             {
+                //Push onto the Stack
                 charStack.push(pare);
             }
             else if (!charStack.empty())
             {
+                //If Stack not Empty and pare is Close Parentheses
+               //Check for Valid Open Parentheses
+               //If non return false
                 switch (pare)
                 {
                     case ')':
@@ -80,10 +86,13 @@ public:
             }
             else
             {
+                //If Close Parentheses nothing in Stack
                 return false;
             }
         }
 
+        //If Still Open Parentheses in Stack return false
+        //Else Empty return true
         return charStack.empty();
     }
 };
