Update 20. Valid Parentheses.md

--- a/20. Valid Parentheses.md
+++ b/20. Valid Parentheses.md
@@ -86,7 +86,7 @@ public:
             }
             else
             {
-                //If Close Parentheses nothing in Stack
+                //If Close Parentheses and nothing in Stack
                 return false;
             }
         }
