Update and rename 1. Two Sum.md to 1.Two Sum.md

--- a/1.Two Sum.md
+++ b/1.Two Sum.md
@@ -37,15 +37,14 @@ You can return the answer in any order.
 
 Constraints:
 
-2 <= nums.length <= 104
+- 2 <= nums.length <= 104
 
--109 <= nums[i] <= 109
+- -109 <= nums[i] <= 109
 
--109 <= target <= 109
+- -109 <= target <= 109
 
-Only one valid answer exists
+- Only one valid answer exists
  
-
 Follow-up: Can you come up with an algorithm that is less than O(n<sup>2</sup>) time complexity?
 
 ---
