--- a/13. Roman To Integer.md
+++ b/13. Roman To Integer.md
@@ -55,11 +55,11 @@ Given a roman numeral, convert it to an integer.
  
 Constraints:
 
-1 <= s.length <= 15
+- 1 <= s.length <= 15
 
-s contains only the characters ('I', 'V', 'X', 'L', 'C', 'D', 'M').
+- s contains only the characters ('I', 'V', 'X', 'L', 'C', 'D', 'M').
 
-It is guaranteed that s is a valid roman numeral in the range [1, 3999].
+- It is guaranteed that s is a valid roman numeral in the range [1, 3999].
 
 ---
 
