Update 14. Longest Common Prefix.md

--- a/14. Longest Common Prefix.md
+++ b/14. Longest Common Prefix.md
@@ -29,11 +29,11 @@ If there is no common prefix, return an empty string "".
 
 Constraints:
 
-1 <= strs.length <= 200
+- 1 <= strs.length <= 200
 
-0 <= strs[i].length <= 200
+- 0 <= strs[i].length <= 200
 
-strs[i] consists of only lowercase English letters.
+- strs[i] consists of only lowercase English letters.
 
 ---
 
