Update 2. Add Two Numbers.md

--- a/2. Add Two Numbers.md
+++ b/2. Add Two Numbers.md
@@ -41,11 +41,11 @@ You may assume the two numbers do not contain any leading zero, except the numbe
 
 Constraints:
 
-The number of nodes in each linked list is in the range [1, 100].
+- The number of nodes in each linked list is in the range [1, 100].
 
-0 <= Node.val <= 9
+- 0 <= Node.val <= 9
 
-It is guaranteed that the list represents a number that does not have leading zeros.
+- It is guaranteed that the list represents a number that does not have leading zeros.
 
 ---
 
