Update 21. Merge Two Sorted Lists.md

--- a/21. Merge Two Sorted Lists.md
+++ b/21. Merge Two Sorted Lists.md
@@ -36,11 +36,11 @@ Return the head of the merged linked list.
  
 Constraints:
 
-The number of nodes in both lists is in the range [0, 50].
+- The number of nodes in both lists is in the range [0, 50].
 
--100 <= Node.val <= 100
+- -100 <= Node.val <= 100
 
-Both list1 and list2 are sorted in non-decreasing order.
+- Both list1 and list2 are sorted in non-decreasing order.
 
 ---
 
