--- a/9. Palindrome Number.md
+++ b/9. Palindrome Number.md
@@ -37,9 +37,8 @@ palindrome, and false otherwise.
  
 Constraints:
 
--2<sup>31</sup> <= x <= 2<sup>31</sup> - 1
+- -2<sup>31</sup> <= x <= 2<sup>31</sup> - 1
  
-
 Follow up: Could you solve it without converting the integer to a string?
 
 ---
