Update 26. Remove Duplicates from Sorted Array.md

--- a/26. Remove Duplicates from Sorted Array.md
+++ b/26. Remove Duplicates from Sorted Array.md
@@ -69,15 +69,20 @@ class Solution {
 public:
     int removeDuplicates(vector<int>& nums) 
     {
+        //Index Position at the Beginning of array
         int j = 1;
+
+        //Go through the nums array
         for (int i = 1; i < nums.size(); i++)
         {
+            //If nuumber before doesn't equal, add i value to the j index then inc j
             if (nums[i - 1] != nums[i])
             {
                 nums[j++] = nums[i];
             }
         }
 
+        //Return number of elements after the removal of duplicates.
         return j;
     }
 };
