Update 27. Remove Element.md

--- a/27. Remove Element.md
+++ b/27. Remove Element.md
@@ -92,7 +92,7 @@ public:
             nums[j++] = nums[i];
         }
 
-        //Return number of Elements.
+        //Return number of Elements after removal of value.
         return j;
     }
 };
