Update 26. Remove Duplicates from Sorted Array.md

--- a/26. Remove Duplicates from Sorted Array.md
+++ b/26. Remove Duplicates from Sorted Array.md
@@ -56,7 +56,7 @@ If all assertions pass, then your solution will be accepted.
  
 Constraints:
 
-- 1 <= nums.length <= 3 * 104
+- 1 <= nums.length <= 3 * 10<sup>4</sup>
 - -100 <= nums[i] <= 100
 - nums is sorted in non-decreasing order.
 
