Update 28. Find the Index of the First Occurrence in a String.md

--- a/28. Find the Index of the First Occurrence in a String.md
+++ b/28. Find the Index of the First Occurrence in a String.md
@@ -40,5 +40,50 @@ Constraints:
 # Solution
 
 ```
-  
+//Substr Usage.
+class Solution {
+public:
+    int strStr(string haystack, string needle) 
+    {
+        //Go through the String
+        for (int i = 0; i < haystack.size(); i++)
+        {
+            //Compare needle with a substring in haystack from i to the needle size
+            if (needle == haystack.substr(i, needle.size()))
+            {
+                return i;
+            }
+        }    
+        return -1;
+    }
+};
+
+//For Looping acting like a String
+//class Solution {
+// public:
+//     int strStr(string haystack, string needle) 
+//     {
+//         //Go through the string
+//         for (int i = 0; i < haystack.size(); i++)
+//         {
+//             //Create a Temp Substring
+//             std::string temp = "";
+
+//             //Add to Temp Substring based on the position of i
+//             for (int j = i; j < haystack.size() && (j - i) < needle.size(); j++)
+//             {
+//                 temp += haystack[j];
+//             }
+
+//             //If Equal, return the position first letter of needle in haystack
+//             if (temp == needle)
+//             {
+//                 return i;
+//             }
+//         } 
+
+//         //If not Found, return -1
+//         return -1;
+//     }
+// };
 ```
