Update 28. Find the Index of the First Occurrence in a String.md

--- a/28. Find the Index of the First Occurrence in a String.md
+++ b/28. Find the Index of the First Occurrence in a String.md
@@ -40,7 +40,7 @@ Constraints:
 # Solution
 
 ```
-//Substr Usage.
+//Substr Usage
 class Solution {
 public:
     int strStr(string haystack, string needle) 
