Update 28. Find the Index of the First Occurrence in a String.md

--- a/28. Find the Index of the First Occurrence in a String.md
+++ b/28. Find the Index of the First Occurrence in a String.md
@@ -58,7 +58,7 @@ public:
     }
 };
 
-//For Looping acting like a String
+//For Looping acting like a Substring
 //class Solution {
 // public:
 //     int strStr(string haystack, string needle) 
