--- a/3. Longest Substring Without Repeating Charaters.md
+++ b/3. Longest Substring Without Repeating Charaters.md
@@ -38,7 +38,7 @@ Given a string s, find the length of the longest substring without repeating cha
  
 Constraints:
 
-- 0 <= s.length <= 5 * 104
+- 0 <= s.length <= 5 * 10<sup>4</sup>
 - s consists of English letters, digits, symbols and spaces.
 
 ---
