Update 3. Longest Substring Without Repeating Charaters.md

--- a/3. Longest Substring Without Repeating Charaters.md
+++ b/3. Longest Substring Without Repeating Charaters.md
@@ -47,45 +47,45 @@ Constraints:
 
 ```
 //HashMap Implementation
-// class Solution {
-// public:
-//     int lengthOfLongestSubstring(string s) 
-//     {
-//         int left = 0;
-//         int maxLength = 0;
-//         //Key = Charaters, Value = Frequency
-//         unordered_map<char, int> mp = {};
+class Solution {
+public:
+    int lengthOfLongestSubstring(string s) 
+    {
+        int left = 0;
+        int maxLength = 0;
+        //Key = Charaters, Value = Frequency
+        unordered_map<char, int> mp = {};
 
-//         //Go through the string
-//         for (int right = 0; right < s.size(); right++)
-//         {
-//             //If not Mapped, Create a Key = Char, Value = Frequency
-//             if (mp.find(s[right]) == mp.end())
-//             {
-//                 mp.insert(pair<char, int>(s[right], 1));
-//             }
-//             else
-//             {
-//                 //Increment the Frequency
-//                 mp[s[right]]++;
-//             }
+        //Go through the string
+        for (int right = 0; right < s.size(); right++)
+        {
+            //If not Mapped, Create a Key = Char, Value = Frequency
+            if (mp.find(s[right]) == mp.end())
+            {
+                mp.insert(pair<char, int>(s[right], 1));
+            }
+            else
+            {
+                //Increment the Frequency
+                mp[s[right]]++;
+            }
 
-//             //While there is a key, value and there is a unquie key with a value greater than 1 
-//             while (mp.find(s[right]) != mp.end() && mp[s[right]] > 1)
-//             {
-//                 //Dec the Frequency and Move the position.
-//                 mp[s[left]]--;
-//                 left++;
-//             }
+            //While there is a key, value and there is a unquie key with a value greater than 1 
+            while (mp.find(s[right]) != mp.end() && mp[s[right]] > 1)
+            {
+                //Dec the Frequency and Move the position.
+                mp[s[left]]--;
+                left++;
+            }
 
-//             //Get the Max Length
-//             maxLength = max(maxLength, right - left + 1);
-//         }
+            //Get the Max Length
+            maxLength = max(maxLength, right - left + 1);
+        }
         
-//         //Return Max Length.
-//         return maxLength;
-//     }
-// };
+        //Return Max Length.
+        return maxLength;
+    }
+};
 
 //Unordered List Implementation
 // class Solution {
