Update 3. Longest Substring Without Repeating Charaters.md

--- a/3. Longest Substring Without Repeating Charaters.md
+++ b/3. Longest Substring Without Repeating Charaters.md
@@ -87,7 +87,7 @@ public:
     }
 };
 
-//Unordered List Implementation
+//Unordered Set Implementation
 // class Solution {
 // public:
 //     int lengthOfLongestSubstring(string s) 
