Update 58. Length of Last Word.md

--- a/58. Length of Last Word.md
+++ b/58. Length of Last Word.md
@@ -38,7 +38,7 @@ A word is a maximal substring consisting of non-space characters only.
  
 Constraints:
 
-- 1 <= s.length <= 104
+- 1 <= s.length <= 10<sup>4</sup>
 - s consists of only English letters and spaces ' '.
 - There will be at least one word in s.
 
@@ -47,5 +47,23 @@ Constraints:
 # Solution
 
 ```
-  
+class Solution {
+public:
+    int lengthOfLastWord(string s) 
+    {
+        bool flag = false;
+        int len = 0;
+        for (int i = s.size() - 1; i >= 0; i--)
+        {
+            if (s[i] == ' ' && flag) break;
+            if (s[i] != ' ')
+            {
+                flag = true;
+                len++;
+            }
+        }    
+
+        return len;
+    }
+};
 ```
