Update 66. Plus One.md

--- a/66. Plus One.md
+++ b/66. Plus One.md
@@ -59,5 +59,37 @@ Constraints:
 # Solution
 
 ```
+class Solution {
+public:
+    vector<int> plusOne(vector<int>& digits) 
+    {
+        //Plus One to the digits
+        int carry = 1;
 
+        //Go through the digit array backwards
+        for (int i = digits.size() - 1; i >= 0; i--)
+        {
+            //First iteration, plus one. Always add the carry
+            digits[i] += (carry);
+
+            //Check for carry
+            carry = digits[i] / 10;
+
+            //If greater than or equal to ten, remove the carry and set the ith position
+            if (digits[i] >= 10)
+            {
+                digits[i] = digits[i] % 10;
+            }
+        }    
+
+        if (carry)
+        {
+            //Add the carry to the beginning of the array
+            digits.insert(digits.begin(), 1, carry);
+        }
+
+        //Return Vector
+        return digits;
+    }
+};
 ```
