Update 66. Plus One.md

--- a/66. Plus One.md
+++ b/66. Plus One.md
@@ -80,6 +80,10 @@ public:
             {
                 digits[i] = digits[i] % 10;
             }
+            else
+            {
+                break;
+            }
         }    
 
         if (carry)
