Update 66. Plus One.md

--- a/66. Plus One.md
+++ b/66. Plus One.md
@@ -70,7 +70,7 @@ public:
         for (int i = digits.size() - 1; i >= 0; i--)
         {
             //First iteration, plus one. Always add the carry
-            digits[i] += (carry);
+            digits[i] += carry;
 
             //Check for carry
             carry = digits[i] / 10;
