Update 58. Length of Last Word.md

--- a/58. Length of Last Word.md
+++ b/58. Length of Last Word.md
@@ -51,11 +51,19 @@ class Solution {
 public:
     int lengthOfLastWord(string s) 
     {
+        //Flag turns true when encounters a charater
         bool flag = false;
+
+        //Counter for Length of Word 
         int len = 0;
+
+        //Go through the list backwards
         for (int i = s.size() - 1; i >= 0; i--)
         {
+            //If there is a space and flag was triggered
             if (s[i] == ' ' && flag) break;
+
+            //If encountered the first charater, trigger flag and inc len
             if (s[i] != ' ')
             {
                 flag = true;
@@ -63,6 +71,7 @@ public:
             }
         }    
 
+        //Return Length of Last Word
         return len;
     }
 };
