--- a/67. Add Binary.md
+++ b/67. Add Binary.md
@@ -1,3 +1,37 @@
+Link: https://leetcode.com/problems/add-binary
+
+Date Solved: 3/20/2024
+
+Language: C++
+
+Difficulty: Easy
+
+# Problem
+
+Given two binary strings a and b, return their sum as a binary string.
+
+>Example 1:
+>
+>>Input: a = "11", b = "1"
+>>
+>>Output: "100"
+
+>Example 2:
+>
+>>Input: a = "1010", b = "1011"
+>>
+>>Output: "10101"
+ 
+Constraints:
+
+- 1 <= a.length, b.length <= 10<sup>4</sup>
+- a and b consist only of '0' or '1' characters.
+- Each string does not contain leading zeros except for the zero itself.
+
+---
+
+# Solution
+
 ```
 class Solution {
 public:
