--- a/69. Sqrt(x).md
+++ b/69. Sqrt(x).md
@@ -32,7 +32,7 @@ For example, do not use `pow(x, 0.5)` in c++ or `x ** 0.5` in python.
  
 Constraints:
 
-- 0 <= x <= 231 - 1
+- 0 <= x <= 2<sup>31</sup> - 1
 
 ---
 
