Update 83. Remove Duplicates from Sorted List.md

--- a/83. Remove Duplicates from Sorted List.md
+++ b/83. Remove Duplicates from Sorted List.md
@@ -12,16 +12,16 @@ Given the head of a sorted linked list, delete all duplicates such that each ele
 
 >Example 1:
 >
->![image](https://github.com/BrianDang03/Leet-Code-Solved/assets/124744302/0052b100-ab9f-40f2-ac87-e70670f1e9f2)
->
+>>![image](https://github.com/BrianDang03/Leet-Code-Solved/assets/124744302/0052b100-ab9f-40f2-ac87-e70670f1e9f2)
+>>
 >>Input: head = [1,1,2]
 >>
 >>Output: [1,2]
 
 >Example 2:
 >
->![image](https://github.com/BrianDang03/Leet-Code-Solved/assets/124744302/1364ab57-3c73-4c88-a57d-ed1018575c45)
->
+>>![image](https://github.com/BrianDang03/Leet-Code-Solved/assets/124744302/1364ab57-3c73-4c88-a57d-ed1018575c45)
+>>
 >>Input: head = [1,1,2,3,3]
 >>
 >>Output: [1,2,3]
