Update 88. Merge Sorted Array.md

--- a/88. Merge Sorted Array.md
+++ b/88. Merge Sorted Array.md
@@ -108,14 +108,12 @@ public:
 //             if (nums1[i] < nums2[j])
 //             {
 //                 //Push nums1 into temp and go to next element in nums1     
-//                 temp.push_back(nums1[i]);
-//                 i++;
+//                 temp.push_back(nums1[i++]);
 //             }
 //             else
 //             {
 //                 //Push nums2 into temp and go to next element in nums2 
-//                 temp.push_back(nums2[j]);
-//                 j++;
+//                 temp.push_back(nums2[j++]);
 //             }
 //         }    
 //
@@ -123,15 +121,13 @@ public:
 //         while (i != m)
 //         {
 //             //Push num1 into temp and go to next element in nums1 
-//             temp.push_back(nums1[i]);
-//             i++;
+//             temp.push_back(nums1[i++]);
 //         }
 //
 //         while (j != n)
 //         {
 //             //Push nums2 into temp and go to next element in nums2  
-//             temp.push_back(nums2[j]);
-//             j++;
+//             temp.push_back(nums2[j++]);
 //         }
 //          
 //         //Set the temp array to nums1 
