--- a/1. Two Sum.md
+++ b/1. Two Sum.md
@@ -38,9 +38,9 @@ Constraints:
 
 - 2 <= nums.length <= 104
 
-- -109 <= nums[i] <= 109
+- -10<sup>9</sup> <= nums[i] <= 10<sup>9</sup>
 
-- -109 <= target <= 109
+- -10<sup>9<sup> <= target <= 10<sup>9</sup>
 
 - Only one valid answer exists
  
