Update 100. Same Tree.md

--- a/100. Same Tree.md
+++ b/100. Same Tree.md
@@ -60,17 +60,20 @@ Constraints:
 class Solution {
 public:
     bool isSameTree(TreeNode* p, TreeNode* q) 
-    {
+    {        
         if (!p && !q)
         {
+            // If Both Nodes are Empty
             return true;
-        }
+        }  
         else if (!p || !q)
         {
+            // If one of the Nodes are Empty
             return false;
         }
         else if (p->val == q->val)
         {
+            // If both are Nodes are equal, Traverse the two trees 
             return isSameTree(p->left, q->left) && isSameTree(p->right, q->right);
         }    
 
@@ -92,31 +95,41 @@ public:
 // class Solution {
 // public:
 //     bool isSameTree(TreeNode* p, TreeNode* q) 
-//     {  
-//         bool ans = true;     
-//         Traverse(p, q, ans); 
+//     {
+//         // ans Pass by Refrence
+//         bool ans = true;
+//         //Traverse both Trees
+//         Traverse(p, q, ans);
+//         //Return ans
 //         return ans;         
 //     }
-
+//
 //     bool Traverse(TreeNode* pCurr, TreeNode* qCurr, bool& ans)
 //     {
+//         // If there Nodes for both
 //         if (pCurr && qCurr)
 //         {
+//             // Traverse the Left of both Trees
 //             Traverse(pCurr->left, qCurr->left, ans);
+//             //Once Returned, Check if both nodes are the same 
 //             if (pCurr->val != qCurr->val)
 //             {
+//                 //If not the same, ans is false
 //                 ans = false;
 //             }
+//             //Traverse the Right of both Trees
 //             Traverse(pCurr->right, qCurr->right, ans);
 //         } 
 //         else
 //         {
+//             // If there is only one node and the other is null  
 //             if (pCurr || qCurr)
 //             {
+//                 // ans is false
 //                 ans = false; 
 //             }  
 //         }                     
-    
+//    
 //         return ans;
 //     }  
 // };
