Update 104. Maximum Depth of Binary Tree.md

--- a/104. Maximum Depth of Binary Tree.md
+++ b/104. Maximum Depth of Binary Tree.md
@@ -1,3 +1,40 @@
+Link: https://leetcode.com/problems/maximum-depth-of-binary-tree
+
+Date Solved: 3/29/2024
+
+Language: C++
+
+Difficulty: Easy
+
+# Problem
+
+Given the root of a binary tree, return its maximum depth.
+
+A binary tree's maximum depth is the number of nodes along the longest path from the root node down to the farthest leaf node.
+
+>Example 1:
+>
+>>![image](https://github.com/BrianDang03/Leet-Code-Solved/assets/124744302/9553bbbc-9abc-4cf2-bef8-38889071803d)
+>>
+>>Input: root = [3,9,20,null,null,15,7]
+>>
+>>Output: 3
+
+>Example 2:
+>
+>>Input: root = [1,null,2]
+>>
+>>Output: 2
+ 
+- Constraints:
+
+- The number of nodes in the tree is in the range [0, 10<sup>4</sup>].
+- -100 <= Node.val <= 100
+
+---
+
+# Solution
+
 ```
 /**
  * Definition for a binary tree node.
@@ -14,7 +51,10 @@ class Solution {
 public:
     int maxDepth(TreeNode* root) 
     {
+        //If the there is no tree node, return with 0
         if (!root) return 0;
+
+        //Traverse the tree and return the max number of depth and add one
         return 1 + max(maxDepth(root->left), maxDepth(root->right));
     }
 };
@@ -34,33 +74,40 @@ public:
 // public:
 //     int maxDepth(TreeNode* root) 
 //     {
+//         // If No Root, Return 0;
 //         if (!root)
 //         {
 //             return 0;
 //         }
+//
+//         // Traverse the tree and pass by refrence the max
 //         int depth = 1;
 //         int max = 1;
 //         Traverse(root, depth, max);
-
+//
 //         return max;
 //     }
-
+//
 //     TreeNode* Traverse(TreeNode* root, int depth, int& max)
 //     {
+//         If max is less than depth set it to depth
 //         max = max < depth ? depth : max; 
-
+//
+//         //If Left Node Traverse it
 //         if (root->left)
 //         {
 //             Traverse(root->left, ++depth, max);
 //             depth--;
 //         }
-
+//
+//         // If Right Node Traverse it
 //         if (root->right)
 //         {
 //             Traverse(root->right, ++depth, max);
 //             depth--;
 //         }
-
+//
+//         //Return to the previous node
 //         return root;
 //     }
 // };
