--- a/108. Convert Sorted Array to Binary Search Tree.md
+++ b/108. Convert Sorted Array to Binary Search Tree.md
@@ -1,1 +1,91 @@
+Link: https://leetcode.com/problems/convert-sorted-array-to-binary-search-tree
 
+Date Solved: 3/30/2024
+
+Language: C++
+
+Difficulty: Easy
+
+# Problem
+
+Given an integer array nums where the elements are sorted in ascending order, convert it to a 
+height-balanced
+ binary search tree.
+
+>Example 1:
+>
+>>![image](https://github.com/BrianDang03/Leet-Code-Solved/assets/124744302/3628ec73-a2a2-42bf-b4d8-5a6745972950)
+>>
+>>Input: nums = [-10,-3,0,5,9]
+>>
+>>Output: [0,-3,9,-10,null,5]
+>>
+>>Explanation: [0,-10,5,null,-3,null,9] is also accepted:
+>>
+>>![image](https://github.com/BrianDang03/Leet-Code-Solved/assets/124744302/e023ecc1-59c8-44d0-be10-7b6e69b9913e)
+
+>Example 2:
+>
+>>![image](https://github.com/BrianDang03/Leet-Code-Solved/assets/124744302/52fc6d6e-4dee-49ce-9505-3ce4213c75c8)
+>>
+>>Input: nums = [1,3]
+>>
+>>Output: [3,1]
+>>
+>>Explanation: [1,null,3] and [3,1] are both height-balanced BSTs.
+ 
+Constraints:
+
+- 1 <= nums.length <= 10<sup>4</sup>
+- -10<sup>4</sup> <= nums[i] <= 10<sup>4</sup>
+- nums is sorted in a strictly increasing order.
+
+---
+
+# Solution
+
+```
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    TreeNode* sortedArrayToBST(vector<int>& nums) 
+    {
+        //Make the Tree By Traversing the Array
+        return Traverse(nums, 0, nums.size() - 1);
+    }
+
+    TreeNode* Traverse(const vector<int>& nums, int l ,int r)
+    {
+        //If the Left is Smaller than the right
+        if (l > r)
+        {
+            //Return null;
+            return nullptr;
+        }
+        //Get the middle
+        int m = l + (r - l) / 2;
+
+        //Create the root
+        TreeNode* root = new TreeNode(nums[m]);
+        
+        //Go to the root left and go to the left side of the array
+        root->left = Traverse(nums, l, m - 1);
+        
+        //Go to the root right and go to the right side of the array
+        root->right = Traverse(nums, m + 1, r);
+
+        //Return root;
+        return root;
+    }
+};
+```
