Update 111. Minimum Depth of Binary Tree.md

--- a/111. Minimum Depth of Binary Tree.md
+++ b/111. Minimum Depth of Binary Tree.md
@@ -50,6 +50,7 @@ Constraints:
  * };
  */
 
+// This lambda function optimizes input/output operations in C++ streams for faster execution
 int speed = []() {
     ios::sync_with_stdio(false);
     cin.tie(NULL);
@@ -57,17 +58,24 @@ int speed = []() {
     return 0;
 }();
 
+// Class Solution contains the method to find the minimum depth of a binary tree
 class Solution {
 public:
+    // Function to find the minimum depth of a binary tree
     int minDepth(TreeNode* root) {
+        // If the root is nullptr, the tree is empty, so return 0
         if (root == nullptr)
             return 0;
 
+        // Recursively find the minimum depth of the left and right subtrees
         int left = minDepth(root->left);
         int right = minDepth(root->right);
 
+        // If either left or right subtree is empty, return the depth of the other subtree + 1
         if (right == 0 || left == 0)
             return max (left, right) + 1;
+        
+        // If both subtrees are non-empty, return the minimum depth of the two subtrees + 1
         root->left = nullptr;
         root->right = nullptr;
         return min(left, right) + 1;
