Update 111. Minimum Depth of Binary Tree.md

--- a/111. Minimum Depth of Binary Tree.md
+++ b/111. Minimum Depth of Binary Tree.md
@@ -82,6 +82,9 @@ public:
     }
 };
 
+// The following code provides an alternative solution to find the minimum depth of a binary tree
+// using a breadth-first search algorithm.
+
 // /**
 //  * Definition for a binary tree node.
 //  * struct TreeNode {
@@ -97,10 +100,11 @@ public:
 // public:
 //     int minDepth(TreeNode* root)
 //     {
-//         queue<TreeNode*> q;
-//         int depth = 0;
-//         bool isTraverse = true;
+//         queue<TreeNode*> q; // Queue to perform breadth-first search
+//         int depth = 0; // Variable to store the depth of the current level
+//         bool isTraverse = true; // Flag to control traversal
 
+//         // If the root exists, add it to the queue; otherwise, return depth as 0
 //         if (root)
 //         {
 //             q.push(root);
@@ -110,36 +114,41 @@ public:
 //             return depth;
 //         }
 
+//         // Perform breadth-first search
 //         while (isTraverse)
 //         {
-//             int size = q.size();
+//             int size = q.size(); // Get the current size of the queue (number of nodes at the current level)
 //             while (size > 0)
 //             {
-//                 root = q.front();
-//                 q.pop();
-//                 size--;
+//                 root = q.front(); // Get the front node of the queue
+//                 q.pop(); // Remove the front node from the queue
+//                 size--; // Decrease the size of the queue
 
+//                 // If the current node is a leaf node, stop traversal and break out of the loop
 //                 if (!root->left && !root->right)
 //                 {
 //                     isTraverse = false;
 //                     break;
 //                 }
 
+//                 // Add the left child of the current node to the queue if it exists
 //                 if (root->left)
 //                 {
 //                     q.push(root->left);
 //                 }
 
+//                 // Add the right child of the current node to the queue if it exists
 //                 if (root->right)
 //                 {
 //                     q.push(root->right);
 //                 }
 //             }
 
-//             depth++;
+//             depth++; // Increment the depth for each level traversed
 //         }
 
-//         return depth;
+//         return depth; // Return the minimum depth of the binary tree
 //     }
 // };
+
 ```
