--- a/118. Pascal's Triangle.md
+++ b/118. Pascal's Triangle.md
@@ -39,22 +39,32 @@ class Solution {
 public:
     vector<vector<int>> generate(int numRows) 
     {
+        //Create the Pascal's First Row
         vector<vector<int>> v = {{1}};
 
+        //Create the Next Rows of Pascal's
+        //Get the current row
         for (int i = 0; i < numRows - 1; i++)
         {
+            //Create a new Temp Row
             vector<int> temp;
+            //Push First Element into the row  
             temp.push_back(1);
 
+            //Go through the previous row
             for (int j = 1; j < v[i].size(); j++)
             {
+                //Add numbers to the new temp row. 
                 temp.push_back(v[i][j - 1] + v[i][j]);
             }   
 
-            temp.push_back(1);  
+            //Push Last element into the new temp row
+            temp.push_back(1);
+            //Push the new temp row into Pascal's  
             v.push_back(temp);      
         }      
 
+        //Return Pascal's
         return v;
     }
 };
