Update 119. Pascal's Triangle II.md

--- a/119. Pascal's Triangle II.md
+++ b/119. Pascal's Triangle II.md
@@ -43,34 +43,65 @@ Follow up: Could you optimize your algorithm to use only O(rowIndex) extra space
 # Solution
 
 ```
+#include <vector>
+
 class Solution {
 public:
+    // Function to generate the rowIndex-th row of Pascal's triangle
     vector<int> getRow(int rowIndex) 
     {
-        //Create the start of Pacal's
-        vector<int> v = {1};
+        // Create a vector to store the row with rowIndex + 1 elements, initialized to 0
+        vector<int> row(rowIndex + 1, 0);
+        
+        // The first element of each row is always 1
+        row[0] = 1;
 
-        //Create Rows             
-        for (int i = 0; i < rowIndex; i++)
+        // Loop to generate each element of the row
+        for (int i = 1; i <= rowIndex; i++)
         {
-            //Create a new Row
-            vector<int> tmp;
-            //First Index
-            tmp.push_back(1);
-            
-            //Go through the previous row and add numbers to the new row
-            for (int j = 1; j < v.size(); j++)
+            // Each element is calculated using the previous row elements
+            // Starting from the end and moving towards the beginning
+            // This ensures we don't overwrite values we need for the current calculation
+            for (int j = i; j >= 1; j--)
             {
-                tmp.push_back(v[j - 1] + v[j]);
+                // Each element is the sum of the element above and to the left in the previous row
+                row[j] += row[j - 1];
             }
+        }
 
-            //Last Index
-            tmp.push_back(1);
-            v = tmp;
-        }     
-
-        //Retrun the Row
-        return v;
+        // Return the generated row
+        return row;
     }
 };
+
+// class Solution {
+// public:
+//     vector<int> getRow(int rowIndex) 
+//     {
+//         //Create the start of Pacal's
+//         vector<int> v = {1};
+
+//         //Create Rows             
+//         for (int i = 0; i < rowIndex; i++)
+//         {
+//             //Create a new Row
+//             vector<int> tmp;
+//             //First Index
+//             tmp.push_back(1);
+            
+//             //Go through the previous row and add numbers to the new row
+//             for (int j = 1; j < v.size(); j++)
+//             {
+//                 tmp.push_back(v[j - 1] + v[j]);
+//             }
+
+//             //Last Index
+//             tmp.push_back(1);
+//             v = tmp;
+//         }     
+
+//         //Retrun the Row
+//         return v;
+//     }
+// };
 ```
