--- a/4. Median of Two Sorted Arrays.md
+++ b/4. Median of Two Sorted Arrays.md
@@ -42,6 +42,149 @@ Constraints:
 # Solution
 
 ```
+//Binary Search Method
+#include <vector>
+#include <climits> // For INT_MIN and INT_MAX
+using namespace std;
+
+class Solution {
+public:
+    // Function to find the median of two sorted arrays
+    double findMedianSortedArrays(vector<int>& nums1, vector<int>& nums2) 
+    {
+        // Get the sizes of the two arrays
+        int n1 = nums1.size(), n2 = nums2.size();
+
+        // Ensure nums1 is smaller or equal to nums2 for ease of computation
+        if (n1 > n2)
+        {
+            return findMedianSortedArrays(nums2, nums1); // Swap the arrays
+        }    
+
+        // Total number of elements in the combined array
+        int n = n1 + n2;
+        // Calculate the number of elements on the left side of the combined array
+        int left = (n1 + n2 + 1) / 2;
+        // Binary search variables to track the partition indices
+        int low = 0, high = n1;
+
+        // Perform binary search on the smaller array (nums1)
+        while (low <= high)
+        {
+            // Calculate the midpoint of nums1 array
+            int mid1 = (low + high) >> 1;
+            // Corresponding midpoint in nums2 array
+            int mid2 = left - mid1;
+
+            // Initialize variables to store the maximum and minimum elements on the left and right partitions
+            int l1 = INT_MIN, l2 = INT_MIN, r1 = INT_MAX, r2 = INT_MAX;
+
+            // Update maximum and minimum elements for nums1 and nums2 partitions
+            if (mid1 < n1)
+            {
+                r1 = nums1[mid1]; // Minimum element on the right of nums1
+            }
+            if (mid2 < n2)
+            {
+                r2 = nums2[mid2]; // Minimum element on the right of nums2
+            }
+            if (mid1 - 1 >= 0)
+            {
+                l1 = nums1[mid1 - 1]; // Maximum element on the left of nums1
+            }
+            if (mid2 - 1 >= 0)
+            {
+                l2 = nums2[mid2 - 1]; // Maximum element on the left of nums2
+            }
+
+            // Check if the current partitions are valid
+            if (l1 <= r2 && l2 <= r1)
+            {
+                // If the total number of elements is odd, return the maximum of the left partitions
+                if (n % 2 == 1)
+                {
+                    return max(l1, l2);
+                }
+                // If the total number of elements is even, return the average of the maximum of left and minimum of right partitions
+                else
+                {
+                    return (double)(max(l1, l2) + min(r1, r2)) / 2.0;
+                }
+            }
+            // Adjust the partitions based on the comparison of maximums and minimums
+            else if (l1 > r2)
+            {
+                high = mid1 - 1; // Move the partition in nums1 to the left
+            }
+            else
+            {
+                low = mid1 + 1; // Move the partition in nums1 to the right
+            }
+        }
+
+        return 0; // Default return value
+    }
+};
+
+
+//Two Pointer Method
+// class Solution {
+// public:
+//     // Function to find the median of two sorted arrays
+//     double findMedianSortedArrays(vector<int>& nums1, vector<int>& nums2) 
+//     {
+//         // Get the sizes of both arrays
+//         int n = nums1.size();
+//         int m = nums2.size();
+        
+//         // Initialize pointers and variables
+//         int i = 0, j = 0, m1 = 0, m2 = 0;
+
+//         // Loop to find the median
+//         for (int count = 0; count <= (n + m) / 2; count++)
+//         {
+//             // Store m1 in m2
+//             m2 = m1;
+            
+//             // Check if both arrays are not exhausted
+//             if (i != n && j != m)
+//             {
+//                 // Compare elements of both arrays and update m1
+//                 if (nums1[i] > nums2[j])
+//                 {
+//                     m1 = nums2[j++];
+//                 }
+//                 else
+//                 {
+//                     m1 = nums1[i++];
+//                 }
+//             }
+//             // If nums1 array is not exhausted
+//             else if (i < n)
+//             {
+//                 m1 = nums1[i++];
+//             }
+//             // If nums2 array is not exhausted
+//             else
+//             {
+//                 m1 = nums2[j++];
+//             }
+//         }    
+
+//         // Check if the total number of elements is odd or even
+//         if((n + m) % 2 == 1)
+//         {
+//             // If odd, return the single median element
+//             return (double)m1;
+//         }
+//         else
+//         {
+//             // If even, return the average of two median elements
+//             return (double)((m1 + m2) / 2.0);
+//         }
+//     }
+// };
+
 
 //Brute Force Method
 // class Solution {
