--- a/125. Valid Palindrome.md
+++ b/125. Valid Palindrome.md
@@ -87,4 +87,32 @@ public:
         return true;
     }
 };
+
+class Solution {
+// public:
+//     bool isPalindrome(string s) 
+//     {
+//         string tmp = "";
+        
+//         for (int i = 0; i < s.size(); i++)
+//         {
+//             if (isalpha(s[i]) || isdigit(s[i]))
+//             {
+//                 tmp += tolower(s[i]);
+//             }
+//         }    
+
+//         s = tmp;
+
+//         for (int i = 0; i < s.size() / 2; i++)
+//         {
+//             if (s[i] != s[(s.size() - 1) - i])
+//             {
+//                 return false;
+//             }
+//         }
+
+//         return true;
+//     }
+// };
 ```
