--- a/136. Single Number.md
+++ b/136. Single Number.md
@@ -20,7 +20,7 @@ You must implement a solution with a linear runtime complexity and use only cons
 
 >Example 2:
 >
->Input: nums = [4,1,2,1,2]
+>>Input: nums = [4,1,2,1,2]
 >>Output: 4
 
 >Example 3:
