Update 141. Linked List Cycle.md

--- a/141. Linked List Cycle.md
+++ b/141. Linked List Cycle.md
@@ -96,4 +96,41 @@ public:
         return false;
     }
 };
+
+// Brute Force Method
+/**
+//  * Definition for singly-linked list.
+//  * struct ListNode {
+//  *     int val;
+//  *     ListNode *next;
+//  *     ListNode(int x) : val(x), next(NULL) {}
+//  * };
+//  */
+// class Solution {
+// public:
+//     bool hasCycle(ListNode *head) 
+//     {
+//         // Create a Empty Set to Store already found Nodes
+//         unordered_set<ListNode*> intPtrSet;
+
+//         // If the head is cycled
+//         while (head != nullptr)
+//         {
+//             // Insert the current Node
+//             intPtrSet.insert(head);
+            
+//             // Go to the next Node
+//             head = head->next;
+
+//             // If Node is in set
+//             if (intPtrSet.find(head) != intPtrSet.end())
+//             {
+//                 return true;
+//             }
+//         }   
+
+//         // Node reach a nullptr
+//         return false;
+//     }
+// };
 ```
