Update 141. Linked List Cycle.md

--- a/141. Linked List Cycle.md
+++ b/141. Linked List Cycle.md
@@ -113,7 +113,7 @@ public:
 //         // Create a Empty Set to Store already found Nodes
 //         unordered_set<ListNode*> intPtrSet;
 
-//         // If the head is cycled
+//         // If there is still a node
 //         while (head != nullptr)
 //         {
 //             // Insert the current Node
