Update 144. Binary Tree Preorder Traversal.md

--- a/144. Binary Tree Preorder Traversal.md
+++ b/144. Binary Tree Preorder Traversal.md
@@ -81,4 +81,62 @@ public:
         return nullptr;        
     }
 };
+
+//iteratively
+// /**
+//  * Definition for a binary tree node.
+//  * struct TreeNode {
+//  *     int val;
+//  *     TreeNode *left;
+//  *     TreeNode *right;
+//  *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+//  *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+//  *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+//  * };
+//  */
+// class Solution {
+// public:
+//     vector<int> preorderTraversal(TreeNode* root) 
+//     {
+//         // Create a vector to store the values of the nodes in preorder traversal
+//         vector<int> nums;
+//         // Create a stack to perform iterative traversal
+//         stack<TreeNode*> treeStack;
+
+//         // Check if the root is null
+//         if (!root)
+//         {
+//             return nums; // If the tree is empty, return an empty vector
+//         }
+
+//         // Push the root onto the stack
+//         treeStack.push(root); 
+
+//         // Loop until the stack is empty
+//         while (!treeStack.empty())  
+//         {              
+//             // Get the top node from the stack
+//             root = treeStack.top();  
+//             // Add the value of the node to the vector
+//             nums.push_back(root->val);
+//             // Pop the node from the stack
+//             treeStack.pop();          
+
+//             // If the right child of the current node exists, push it onto the stack
+//             if (root->right)
+//             {
+//                 treeStack.push(root->right);
+//             }   
+
+//             // If the left child of the current node exists, push it onto the stack
+//             if (root->left)
+//             {   
+//                 treeStack.push(root->left);                                              
+//             }                           
+//         }       
+
+//         // Return the vector containing the preorder traversal of the binary tree
+//         return nums;    
+//     }
+// };
 ```
