Update 144. Binary Tree Preorder Traversal.md

--- a/144. Binary Tree Preorder Traversal.md
+++ b/144. Binary Tree Preorder Traversal.md
@@ -43,6 +43,7 @@ Follow up: Recursive solution is trivial, could you do it iteratively?
 # Solution
 
 ```
+//Iteratively
 /**
  * Definition for a binary tree node.
  * struct TreeNode {
@@ -58,32 +59,50 @@ class Solution {
 public:
     vector<int> preorderTraversal(TreeNode* root) 
     {
-        // Create a storage for vals 
+        // Create a vector to store the values of the nodes in preorder traversal
         vector<int> nums;
-        // Traverse the Tree in Preorder manner
-        Traverse(root, nums);
-        // Return the storage
-        return nums;
-    }
+        // Create a stack to perform iterative traversal
+        stack<TreeNode*> treeStack;
 
-    // Pass the nums stoarge by the refrence  
-    TreeNode* Traverse(TreeNode* root, vector<int>& nums)
-    {
-        //If there is a root do the traversal
-        if (root)
+        // Check if the root is null
+        if (!root)
         {
-            nums.push_back(root->val);
-            Traverse(root->left, nums);
-            Traverse(root->right, nums);
+            return nums; // If the tree is empty, return an empty vector
         }
 
-        // Else return a null pointer
-        return nullptr;        
+        // Push the root onto the stack
+        treeStack.push(root); 
+
+        // Loop until the stack is empty
+        while (!treeStack.empty())  
+        {              
+            // Get the top node from the stack
+            root = treeStack.top();  
+            // Add the value of the node to the vector
+            nums.push_back(root->val);
+            // Pop the node from the stack
+            treeStack.pop();          
+
+            // If the right child of the current node exists, push it onto the stack
+            if (root->right)
+            {
+                treeStack.push(root->right);
+            }   
+
+            // If the left child of the current node exists, push it onto the stack
+            if (root->left)
+            {   
+                treeStack.push(root->left);                                              
+            }                           
+        }       
+
+        // Return the vector containing the preorder traversal of the binary tree
+        return nums;    
     }
 };
 
-//iteratively
-// /**
+//Recursively
+/**
 //  * Definition for a binary tree node.
 //  * struct TreeNode {
 //  *     int val;
@@ -98,45 +117,27 @@ public:
 // public:
 //     vector<int> preorderTraversal(TreeNode* root) 
 //     {
-//         // Create a vector to store the values of the nodes in preorder traversal
+//         // Create a storage for vals 
 //         vector<int> nums;
-//         // Create a stack to perform iterative traversal
-//         stack<TreeNode*> treeStack;
+//         // Traverse the Tree in Preorder manner
+//         Traverse(root, nums);
+//         // Return the storage
+//         return nums;
+//     }
 
-//         // Check if the root is null
-//         if (!root)
+//     // Pass the nums stoarge by the refrence  
+//     TreeNode* Traverse(TreeNode* root, vector<int>& nums)
+//     {
+//         //If there is a root do the traversal
+//         if (root)
 //         {
-//             return nums; // If the tree is empty, return an empty vector
+//             nums.push_back(root->val);
+//             Traverse(root->left, nums);
+//             Traverse(root->right, nums);
 //         }
 
-//         // Push the root onto the stack
-//         treeStack.push(root); 
-
-//         // Loop until the stack is empty
-//         while (!treeStack.empty())  
-//         {              
-//             // Get the top node from the stack
-//             root = treeStack.top();  
-//             // Add the value of the node to the vector
-//             nums.push_back(root->val);
-//             // Pop the node from the stack
-//             treeStack.pop();          
-
-//             // If the right child of the current node exists, push it onto the stack
-//             if (root->right)
-//             {
-//                 treeStack.push(root->right);
-//             }   
-
-//             // If the left child of the current node exists, push it onto the stack
-//             if (root->left)
-//             {   
-//                 treeStack.push(root->left);                                              
-//             }                           
-//         }       
-
-//         // Return the vector containing the preorder traversal of the binary tree
-//         return nums;    
+//         // Else return a null pointer
+//         return nullptr;        
 //     }
 // };
 ```
