Update 145. Binary Tree Postorder Traversal.md

--- a/145. Binary Tree Postorder Traversal.md
+++ b/145. Binary Tree Postorder Traversal.md
@@ -43,6 +43,8 @@ Follow up: Recursive solution is trivial, could you do it iteratively?
 
 ```
 
+
+// Recursively
 /**
 //  * Definition for a binary tree node.
 //  * struct TreeNode {
